@@ -1,3 +1,8 @@
+Sun Mar 13 17:34:18 2005  John Tytgat  <John.Tytgat@aaug.net>
+
+	* source/module/sul.s: error_active address doesn't need module_start
+	  compensation in ADR usage.
+
 Sun Mar 13 10:05:00 2005  Alex Waugh  <alex@alexwaugh.com>
 
 	* source/locale/localeconv.c (localconv): Ensure everything we free
